@@ -16,7 +16,6 @@ import no.difi.meldingsutveksling.nextmove.v2.NextMoveUploadedFile;
 import no.difi.meldingsutveksling.nextmove.v2.OnBehalfOfNormalizer;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
@@ -32,7 +31,6 @@ import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
@@ -59,7 +57,6 @@ import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {
         SecurityConfiguration.class,
         FixedClockConfig.class,
@@ -124,9 +121,10 @@ class NextMoveMessageOutControllerTest {
                                                 .description("The Standard Business Document."),
                                         partWithName("Before The Law")
                                                 .optional()
-                                                .description("There can be zero or more attachments. The name of the part will be used as a title for the attachment.\n" +
-                                                        "The originalFilename will be used as the name of the file in the ASiC.\n" +
-                                                        "Please note that the Content-Type of the part must be set to the MIME-type of the attachment.")
+                                                .description("""
+                                                        There can be zero or more attachments. The name of the part will be used as a title for the attachment.
+                                                        The originalFilename will be used as the name of the file in the ASiC.
+                                                        Please note that the Content-Type of the part must be set to the MIME-type of the attachment.""")
                                 ),
                                 responseFields()
                                         .and(standardBusinessDocumentHeaderDescriptors("standardBusinessDocumentHeader."))
@@ -363,7 +361,7 @@ class NextMoveMessageOutControllerTest {
                                         parameterWithName("processIdentifier").optional().description("Filter on processIdentifier"),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier"),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier"),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on service identifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on service identifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", "))))
                                 ).and(getPagingParameterDescriptors()),
